# qt-study

./: CMakeLists.txt  README.md
headers/: circle.h  dot.h  drawingwidget.h  mainwindow.h  point.h  square.h  triangle.h
src/: circle.cpp  dot.cpp  drawingwidget.cpp  main.cpp  mainwindow.cpp  point.cpp  square.cpp  triangle.cpp
